[package]
name = "tul"
version = "0.1.0"
edition = "2021"
description = "A rust wasm serverlesss worker"
authors = ["yylt <yang8518296@163.com>"]
license = "MIT"
repository = "https://github.com/yylt/tul"
homepage = "https://github.com/yylt/tul"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8.1", features = ["http"] }
worker-macros = { version = "0.8.1" }
futures = "0.3.32"
wasm-bindgen-futures = "0.4.71"
wasm-bindgen = "0.2.121"
js-sys = "0.3.91"
hickory-proto = { version = "0.26.1", default-features = false }
tokio = { version = "1.52.3", features = ["io-util", "sync"], default-features = false }
regex = "1.12.3"
getrandom = { version = "0.4", features = ["wasm_js"], default-features = false }
sha2 = "0.11.0"
pin-project-lite = "0.2.17"

prefix-trie = "0.8.3"
ipnet = "2.12.0"
serde = { version = "1.0.195", features = ["derive"], default-features = false }

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
debug-assertions = false
codegen-units = 1


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--all-features"]
