[package]
name = "tul"
version = "0.1.0"
edition = "2021"
description = "A rust wasm serverlesss worker"
authors = ["yylt <yang8518296@163.com>"]
license = "MIT"
repository = "https://github.com/yylt/tul"
homepage = "https://github.com/yylt/tul"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8.3", features = ["http"], default-features = false }
futures-util = { version = "0.3.32", default-features = false }
tokio = { version = "1.52.3", features = ["io-util", "sync"], default-features = false }
regex = { version = "1.12.3", default-features = false }
getrandom = { version = "0.4", features = ["wasm_js"], default-features = false }
sha2 = { version = "0.11.0", default-features = false }
serde_json = { version = "1", default-features = false }
pin-project-lite = "0.2.17"

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
debug-assertions = false
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--all-features"]
